2-traffic-management/mirorring/mirror-v2-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - sockshop-gateway
  http:
  - route:
    - destination:
        host: front-end
        subset: v1
      weight: 100
    mirror:
      host: front-end
      subset: v2
    mirrorPercentage: 
      value: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end
  namespace: sock-shop
spec:
  host: front-end
  subsets:
  - name: v1
    labels:
      version: v1
      name: front-end
  - name: v2
    labels:
      version: v2
      name: front-end
